--- a/Sisu/src/main/resources/style.css
+++ b/Sisu/src/main/resources/style.css
@@ -1,4 +1,27 @@
 
 .button {
     -fx-background-color: #ffccff;
+    
 }
+
+.titled-pane > *.content{
+    -fx-border-color: transparent;
+}
+
+
+
+.titled-pane > .title 
+{
+    -fx-border: none;
+    -fx-background-color: transparent; 
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
+    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
+
+}
+
+.titled-pane > *.content 
+{
+    -fx-background-insets: 0, 0 1 1 1;
+    -fx-padding: 0.167em;
+ }
