--- a/Sisu/src/main/resources/style.css
+++ b/Sisu/src/main/resources/style.css
@@ -1,14 +1,30 @@
+/*:root {
+  --left: #1e90ff;
+  --right: #11ffff;
+}
+*/
 
 .button {
     -fx-background-color: #ffccff;
     
 }
 
+/*remove vertical lines of titled panes*/
 .titled-pane > *.content{
     -fx-border-color: transparent;
+    /*-fx-background-color: var(--right);*/
 }
 
 
+.text-field {
+    -fx-background-color: #a9a9a9 , white , white;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
+
+.text-field:focused {
+    -fx-background-color: #a9a9a9 , white , white;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
 
 .titled-pane > .title 
 {
@@ -25,3 +41,4 @@
     -fx-background-insets: 0, 0 1 1 1;
     -fx-padding: 0.167em;
  }
+ 
