--- a/Sisu/src/main/resources/style.css
+++ b/Sisu/src/main/resources/style.css
@@ -4,41 +4,39 @@
 }
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
+
+.root{
+    -fx-font-size: 12pt ;
+    -fx-font-family: 'Fira Sans', sans-serif;
+}
 .button {
-    -fx-background-color: #ffccff;
-    
+    -fx-background-color: #C9EAFF;
 }
 
-/*remove vertical lines of titled panes*/
-.titled-pane > *.content{
-    -fx-border-color: transparent;
-    /*-fx-background-color: var(--right);*/
+.titled-pane > *.content {
+  -fx-background-color: null;
+  -fx-border-color: null;
+}
+
+.titled-pane:focused 
+{
+-fx-text-fill: #111111;
 }
 
 
-.text-field {
-    -fx-background-color: #a9a9a9 , white , white;
-    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
-}
-
-.text-field:focused {
-    -fx-background-color: #a9a9a9 , white , white;
-    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
-}
 
 .titled-pane > .title 
 {
     -fx-border: none;
     -fx-background-color: transparent; 
-    -fx-background-insets: 0, 1, 2;
-    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
-    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
 
 }
-
-.titled-pane > *.content 
-{
-    -fx-background-insets: 0, 0 1 1 1;
-    -fx-padding: 0.167em;
- }
  
+ .chart-legend {
+   -fx-background-color:  transparent;
+   -fx-padding: 20px;
+}
+
+.default-color0.chart-pie { -fx-pie-color: #ffd700; }
+.default-color1.chart-pie { -fx-pie-color: #ffa500; }
