--- a/Sisu/src/main/resources/style.css
+++ b/Sisu/src/main/resources/style.css
@@ -40,3 +40,17 @@
 
 .default-color0.chart-pie { -fx-pie-color: #ffd700; }
 .default-color1.chart-pie { -fx-pie-color: #ffa500; }
+
+.text-field {
+    -fx-border-width : 0 0 1 0;
+    -fx-border-color: #111111;
+    -fx-background-color: transparent;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
+
+.text-field:focused {
+    -fx-border-width : 0 0 1 0;
+    -fx-border-color: #111111;
+    -fx-background-color: transparent;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
