--- a/Sisu/src/main/resources/style.css
+++ b/Sisu/src/main/resources/style.css
@@ -54,3 +54,14 @@
     -fx-background-color: transparent;
     -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
 }
+
+
+.choice-box {
+  -fx-background-color: #99C4DE;
+  -fx-border-width: 1 1 1 1;
+  -fx-border-color: #567B91;
+  -fx-text-fill: black; 
+}
+
+
+
